[gd_scene load_steps=4 format=3 uid="uid://e48x6rmcjgy7"]

[ext_resource type="Script" path="res://entities/sign_spawner/sign_spawner.gd" id="1_mfihj"]
[ext_resource type="PackedScene" uid="uid://bmeflkttin1ks" path="res://entities/sign/sign.tscn" id="2_h0faa"]
[ext_resource type="PackedScene" uid="uid://wrsulnlolt62" path="res://components/distance_clock/distance_clock.tscn" id="3_8mc8v"]

[node name="SignSpawner" type="Marker2D"]
y_sort_enabled = true
script = ExtResource("1_mfihj")
_sign_scene = ExtResource("2_h0faa")

[node name="DistanceClock" parent="." instance=ExtResource("3_8mc8v")]
distance = 1500.0
instant = false

[connection signal="distance_reached" from="DistanceClock" to="." method="_on_distance_clock_distance_reached"]
